# PolarisAIDataInsight

./: .gitignore  README.md
.github/workflows/: python-publish-langchain.yml  python-publish-mcp.yml  python-publish-polaris-ai-datainsight.yml
langchain-polaris-ai-datainsight/: .gitignore  Makefile  README.md  pyproject.toml
langchain-polaris-ai-datainsight/docs/: document_loaders.ipynb
langchain-polaris-ai-datainsight/docs/example/: example.docx
langchain-polaris-ai-datainsight/langchain_polaris_ai_datainsight/: __init__.py  datainsight_loader.py
langchain-polaris-ai-datainsight/tests/integration_tests/: test_datainsight_loader.py
langchain-polarisoffice-datainsight/: Makefile  README.md  pyproject.toml
langchain-polarisoffice-datainsight/docs/: document_loaders.ipynb
langchain-polarisoffice-datainsight/langchain_polarisoffice_datainsight/: __init__.py
mcp-polaris-ai-datainsight/: Dockerfile  Makefile  README.md  pyproject.toml  smithery.yaml
mcp-polaris-ai-datainsight/examples/: example_tool_output.json
mcp-polaris-ai-datainsight/mcp_polaris_ai_datainsight/: server.py
mcp-polaris-ai-datainsight/src/: server.py
polaris-ai-datainsight/: Makefile  pyproject.toml
polaris-ai-datainsight/polaris_ai_datainsight/: datainsight_extractor.py
polaris-ai-datainsight/tests/examples/: example.docx
polaris-ai-datainsight/tests/integration_tests/: test_datainsight_extractor.py
polaris-ai-datainsight/tests/unit_tests/: test_datainsight_extractor.py
polaris-ai-datainsight/utils/: file_utils.py  http_utils.py
(+1 files in other folders)
